@@ -33,6 +33,7 @@ jobs:
           - "3.9"
           - "3.10"
           - "3.11"
+          - "3.12.7"  # to ensure the 'no ssl reuse' route is tested
           - "3.12"
     name: "unit test on Python ${{ matrix.python-version }}"
     steps:
